some new update for Java